--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,45 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
+# Gradle settings
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Minecraft
+minecraft_version=1.14.4
+minecraft_dependency=[1.14,1.15)
+minecraft_suffix=mc1.14
+java_target=8
+java_dependency=>=8
+resource_pack_format=4
+
+# Forge
+forge_version=28.2.26
+forge_dependency=[26,)
+
+# Mixin
+mixin_minimum_version=0.8
+mixin_package=mixin
+mixin_compatibility_level=JAVA_8
+
+# Mod properties
+mod_name=Entangled
+mod_description=Entangled allows you to 'entangle' two blocks together!
+mod_id=entangled
+mod_version=1.3.10
+mod_license=All rights reserved
+mod_page=https://www.curseforge.com/minecraft/mc-mods/entangled
+mod_sources=https://github.com/SuperMartijn642/Entangled
+mod_issues=https://github.com/SuperMartijn642/Entangled/issues
+mod_package=com.supermartijn642.entangled
+mod_main_class=Entangled
+maven_group=com.supermartijn642
+
+# Dependencies
+core_library_file=3596458
+core_library_dependency=[1.0.16,1.1.0)
+config_library_file=3413934
+config_library_dependency=[1.0.9,)
+hwyla_file=2777880
+the_one_probe_file=2796414
+
+# Runtime mods
+just_enough_items_file=3039707
+block_renderer_file=3061378
