--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,64 +1,61 @@
-# This is an example mods.toml file. It contains the data relating to the loading mods.
-# There are several mandatory fields (#mandatory), and many more that are optional (#optional).
-# The overall format is standard TOML format, v0.5.0.
-# Note that there are a couple of TOML lists in this file.
-# Find more information on toml format here:  https://github.com/toml-lang/toml
 # The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
 modLoader="javafml" #mandatory
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[25,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+loaderVersion="${forge_dependency}" #mandatory
+# The license for your mod
+license="${mod_license}" #mandatory
 # A URL to refer people to when problems occur with this mod
-#issueTrackerURL="" #optional
+issueTrackerURL="${mod_issues}" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
-modId="entangled" #mandatory
-# The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.3.10" #mandatory
+modId="${mod_id}" #mandatory
+# The version number of the mod
+version="${mod_version}" #mandatory
 # A display name for the mod
-displayName="Entangled" #mandatory
+displayName="${mod_name}" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
 #updateJSONURL="" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-#displayURL="" #optional
+displayURL="${mod_page}" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="entangled.png" #optional
+logoFile="${mod_id}.png" #optional
 # A text field displayed in the mod UI
 #credits="" #optional
 # A text field displayed in the mod UI
 authors="SuperMartijn642" #optional
 # The description text for the mod (multi line!) (#mandatory)
-description='''Entangled gives you the materials needed to bind two blocks together, allowing you to interact with either one as if they were the same block! This will allow you to transfer items, energy, fluids or whatever you want instantly, you can have more than eight sides to work with or you could just hide your messy cables, or whatever you can imagine!'''
+description='''${mod_description}'''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.entangled]] #optional
+[[dependencies.${mod_id}]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
     mandatory=true #mandatory
     # The version range of the dependency
-    versionRange="[29,)" #mandatory
+    versionRange="${forge_dependency}" #mandatory
     # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
 # Here's another dependency
-[[dependencies.entangled]]
+[[dependencies.${mod_id}]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.15,1.16)"
+    versionRange="${minecraft_dependency}"
     ordering="NONE"
     side="BOTH"
 # Add a dependency on SuperMartijn642's Config Lib
-[[dependencies.entangled]]
-    modId="supermartijn642configlib"
-    mandatory=true
-    versionRange="[1.0.9,1.1.0)"
-    ordering="NONE"
-    side="BOTH"
-# Add a dependency on SuperMartijn642's Core Lib
-[[dependencies.entangled]]
+[[dependencies.${mod_id}]]
     modId="supermartijn642corelib"
     mandatory=true
-    versionRange="[1.0.14,1.1.0)"
+    versionRange="${core_library_dependency}"
+    ordering="NONE"
+    side="BOTH"
+# Add a dependency on SuperMartijn642's Config Lib
+[[dependencies.${mod_id}]]
+    modId="supermartijn642configlib"
+    mandatory=true
+    versionRange="${config_library_dependency}"
     ordering="NONE"
     side="BOTH"
