--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ resource_pack_format=9
 # Fabric
 fabric_loader_version=0.13.3
 fabric_loader_dependency=>=0.13.3
-fabric_api_version=0.47.8+1.18.2
+fabric_api_version=0.57.0+1.18.2
 fabric_api_dependency=*
 
 # Mixin
@@ -41,3 +41,4 @@ core_library_dependency=>=1.0.16 <1.1.0
 config_library_file=3542143
 config_library_dependency=>=1.0.9
 team_reborn_energy_version=2.2.0
+jade_version=3866561
