--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ mixin_compatibility_level=JAVA_17
 mod_name=Entangled
 mod_description=Entangled gives you the materials needed to bind two blocks together, allowing you to interact with either one as if they were the same block! This will allow you to transfer items, energy, fluids or whatever you want instantly, you can have more than eight sides to work with or you could just hide your messy cables, or whatever you can imagine!
 mod_id=entangled
-mod_version=1.3.11
+mod_version=1.3.11a
 mod_license=All rights reserved
 mod_page=https://www.curseforge.com/minecraft/mc-mods/entangled
 mod_sources=https://github.com/SuperMartijn642/Entangled
