--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(project.java_target)
 println("Java: " + System.getProperty("java.version") + " JVM: " + System.getProperty("java.vm.version") + "(" + System.getProperty("java.vendor") + ") Arch: " + System.getProperty("os.arch"))
 
 repositories {
+    flatDir {
+        dirs "libs"
+    }
     maven {
         url "https://www.cursemaven.com"
     }
@@ -32,14 +35,15 @@ dependencies {
     minecraft "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
 
     // Core library
-    implementation fg.deobf("curse.maven:supermartijn642s-core-lib-454372:${project.core_library_file}")
+//    implementation fg.deobf("curse.maven:supermartijn642s-core-lib-454372:${project.core_library_file}")
+    implementation fg.deobf("com.supermartijn642:supermartijn642corelib:1.1.0-forge-mc1.19")
     // Config library
     implementation fg.deobf("curse.maven:supermartijn642s-config-lib-438332:${project.config_library_file}")
 
     // Jade
-    compileOnly fg.deobf("curse.maven:jade-324717:${project.jade_file}")
+    implementation fg.deobf("curse.maven:jade-324717:${project.jade_file}")
     // The One Probe
-    compileOnly fg.deobf("curse.maven:the-one-probe-245211:${project.the_one_probe_file}")
+    implementation fg.deobf("curse.maven:the-one-probe-245211:${project.the_one_probe_file}")
 
     // Just Enough Items
 //    runtimeOnly fg.deobf("curse.maven:jei-238222:${project.just_enough_items_file}")
