--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ resource_pack_format=9
 # Forge
 forge_version=40.1.0
 forge_dependency=[38,)
+javafml_dependency=[38,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -34,11 +35,11 @@ maven_group=com.supermartijn642
 
 # Dependencies
 core_library_file=3649270
-core_library_dependency=[1.0.16,1.1.0)
-config_library_file=3542143
-config_library_dependency=[1.0.9,)
-jade_file=3761542
-the_one_probe_file=3430022
+core_library_dependency=[1.1.0,1.2.0)
+config_library_file=3862966
+config_library_dependency=[1.1.6,)
+jade_file=3865918
+the_one_probe_file=3671753
 
 # Runtime mods
 just_enough_items_file=3758750
