--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ resource_pack_format=7
 # Forge
 forge_version=37.1.1
 forge_dependency=[37,)
+javafml_dependency=[37,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -34,9 +35,9 @@ maven_group=com.supermartijn642
 
 # Dependencies
 core_library_file=3596491
-core_library_dependency=[1.0.16,1.1.0)
-config_library_file=3413940
-config_library_dependency=[1.0.9,)
+core_library_dependency=[1.1.0,1.2.0)
+config_library_file=3862965
+config_library_dependency=[1.1.6,)
 jade_file=3468298
 the_one_probe_file=3430022
 
