--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ resource_pack_format=6
 # Forge
 forge_version=36.2.0
 forge_dependency=[32,)
+javafml_dependency=[32,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -34,9 +35,9 @@ maven_group=com.supermartijn642
 
 # Dependencies
 core_library_file=3596490
-core_library_dependency=[1.0.16,1.1.0)
-config_library_file=3413938
-config_library_dependency=[1.0.9,)
+core_library_dependency=[1.1.0,1.2.0)
+config_library_file=3862963
+config_library_dependency=[1.1.6,)
 hwyla_file=3033593
 the_one_probe_file=3319255
 
