--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ resource_pack_format=5
 # Forge
 forge_version=31.2.57
 forge_dependency=[29,)
+javafml_dependency=[29,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -21,7 +22,7 @@ mixin_compatibility_level=JAVA_8
 
 # Mod properties
 mod_name=Entangled
-mod_description=Entangled allows you to 'entangle' two blocks together!
+mod_description=Entangled gives you the materials needed to bind two blocks together, allowing you to interact with either one as if they were the same block! This will allow you to transfer items, energy, fluids or whatever you want instantly, you can have more than eight sides to work with or you could just hide your messy cables, or whatever you can imagine!
 mod_id=entangled
 mod_version=1.3.11
 mod_license=All rights reserved
@@ -34,9 +35,9 @@ maven_group=com.supermartijn642
 
 # Dependencies
 core_library_file=3596461
-core_library_dependency=[1.0.16,1.1.0)
-config_library_file=3413935
-config_library_dependency=[1.0.9,)
+core_library_dependency=[1.1.0,1.2.0)
+config_library_file=3862962
+config_library_dependency=[1.1.6,)
 hwyla_file=2880069
 the_one_probe_file=3040732
 
