--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ resource_pack_format=4
 # Forge
 forge_version=28.2.26
 forge_dependency=[26,)
+javafml_dependency=[26,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -34,9 +35,9 @@ maven_group=com.supermartijn642
 
 # Dependencies
 core_library_file=3596458
-core_library_dependency=[1.0.16,1.1.0)
-config_library_file=3413934
-config_library_dependency=[1.0.9,)
+core_library_dependency=[1.1.0,1.2.0)
+config_library_file=3862961
+config_library_dependency=[1.1.6,)
 hwyla_file=2777880
 the_one_probe_file=2796414
 
