--- a/gradle.properties
+++ b/gradle.properties
@@ -35,6 +35,8 @@ maven_group=com.supermartijn642
 
 # Dependencies
 core_library_file=3751319
-config_library_file=3666797
+core_library_dependency=[1.1.0,1.2.0)
+config_library_file=3862959
+config_library_dependency=[1.1.6,)
 hwyla_file=2568751
 the_one_probe_file=2667280
