--- a/gradle.properties
+++ b/gradle.properties
@@ -33,6 +33,20 @@ mod_package=com.supermartijn642.entangled
 mod_main_class=Entangled
 maven_group=com.supermartijn642
 
+# CurseForge
+curseforge_project_id=entangled
+curseforge_release_type=release
+curseforge_game_versions=1.12 1.12.1 1.12.2
+curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
+curseforge_optional_dependency_ids=
+
+# Modrinth
+modrinth_project_id=entangled
+modrinth_release_type=release
+modrinth_game_versions=1.12 1.12.1 1.12.2
+modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
+modrinth_optional_dependency_ids=
+
 # Dependencies
 core_library_file=3751319
 core_library_dependency=[1.1.0,1.2.0)
