--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ mixin_compatibility_level=JAVA_17
 
 # Mod properties
 mod_name=Entangled
-mod_description=Entangled gives you the materials needed to bind two blocks together, allowing you to interact with either one as if they were the same block! This will allow you to transfer items, energy, fluids or whatever you want instantly, you can have more than eight sides to work with or you could just hide your messy cables, or whatever you can imagine!
+mod_description=Entangled allows you to 'entangle' two blocks together!
 mod_id=entangled
 mod_version=1.3.11
 mod_license=All rights reserved
@@ -32,6 +32,20 @@ mod_issues=https://github.com/SuperMartijn642/Entangled/issues
 mod_package=com.supermartijn642.entangled
 mod_main_class=Entangled
 maven_group=com.supermartijn642
+
+# CurseForge
+curseforge_project_id=entangled
+curseforge_release_type=release
+curseforge_game_versions=1.18 1.18.1 1.18.2
+curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
+curseforge_optional_dependency_ids=
+
+# Modrinth
+modrinth_project_id=entangled
+modrinth_release_type=release
+modrinth_game_versions=1.18 1.18.1 1.18.2
+modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
+modrinth_optional_dependency_ids=
 
 # Dependencies
 core_library_file=3649270
