--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.19.2
-minecraft_dependency=[1.19,1.19.3)
-minecraft_suffix=mc1.19
+minecraft_version=1.19.3
+minecraft_dependency=[1.19.3,1.20)
+minecraft_suffix=mc1.19.3
 java_target=17
 java_dependency=>=17
 resource_pack_format=9
 
 # Forge
-forge_version=43.1.16
-forge_dependency=[41.0.94,)
-javafml_dependency=[41,)
+forge_version=44.1.0
+forge_dependency=[44.1,)
+javafml_dependency=[44,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -36,14 +36,14 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=301034
 curseforge_release_type=release
-curseforge_game_versions=1.19 1.19.1 1.19.2
+curseforge_game_versions=1.19.3
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
 
 # Modrinth
 modrinth_project_id=entangled
 modrinth_release_type=release
-modrinth_game_versions=1.19 1.19.1 1.19.2
+modrinth_game_versions=1.19.3
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
@@ -52,8 +52,8 @@ core_library_file=3863130
 core_library_dependency=[1.1.0,1.2.0)
 config_library_file=3871792
 config_library_dependency=[1.1.6,)
-jade_file=3872400
-the_one_probe_file=3871444
+jade_file=4330163
+the_one_probe_file=4159743
 
 # Runtime mods
 just_enough_items_file=4239206
