--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.18.2
-minecraft_dependency=1.18.x
-minecraft_suffix=mc1.18
+minecraft_version=1.19.3
+minecraft_dependency=>=1.19.3 <=1.20
+minecraft_suffix=mc1.19
 java_target=17
 java_dependency=>=17
 resource_pack_format=9
 
 # Fabric
-fabric_loader_version=0.14.8
+fabric_loader_version=0.14.12
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.58.0+1.18.2
+fabric_api_version=0.73.0+1.19.3
 fabric_api_dependency=*
 
 # Mixin
@@ -38,14 +38,14 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=301034
 curseforge_release_type=release
-curseforge_game_versions=1.18 1.18.1 1.18.2
+curseforge_game_versions=1.19.3
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
 
 # Modrinth
 modrinth_project_id=entangled
 modrinth_release_type=release
-modrinth_game_versions=1.18 1.18.1 1.18.2
+modrinth_game_versions=1.19.3
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
@@ -55,4 +55,4 @@ core_library_dependency=>=1.1.0 <1.2.0
 config_library_file=3542143
 config_library_dependency=>=1.1.0
 team_reborn_energy_version=2.2.0
-jade_version=3866561
+jade_version=4328555
