--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ processResources {
 minecraft {
     mappings channel: "official", version: project.minecraft_version
 
-    // accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
+    accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
 
     runs {
         client {
