--- a/gradle.properties
+++ b/gradle.properties
@@ -50,9 +50,12 @@ modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-conf
 modrinth_optional_dependency_ids=
 
 # Dependencies
-core_library_file=3649270
+core_library_file=4548430
 core_library_dependency=>=1.1.0 <1.2.0
-config_library_file=3542143
+config_library_file=4494777
 config_library_dependency=>=1.1.0
 team_reborn_energy_version=2.2.0
 jade_version=4439089
+
+# Runtime mods
+just_enough_items_file=4494409
