--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ java_target=17
 java_dependency=>=17
 resource_pack_format=22
 
-# Forge
+# NeoForge
 neoforge_version=20.4.43-beta
 neoforge_dependency=[20.3,)
 javafml_dependency=[1,)
