--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.20
+minecraft_version=1.20.2
 minecraft_dependency=>=1.20 <1.21
 minecraft_suffix=mc1.20
 java_target=17
@@ -11,9 +11,9 @@ java_dependency=>=17
 resource_pack_format=12
 
 # Fabric
-fabric_loader_version=0.14.21
+fabric_loader_version=0.15.6
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.83.0+1.20
+fabric_api_version=0.91.6+1.20.2
 fabric_api_dependency=*
 
 # Mixin
@@ -38,24 +38,24 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=301034
 curseforge_release_type=release
-curseforge_game_versions=1.20 1.20.1
+curseforge_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
 
 # Modrinth
 modrinth_project_id=entangled
 modrinth_release_type=release
-modrinth_game_versions=1.20 1.20.1
+modrinth_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
-core_library_file=4666040
-core_library_dependency=>=1.1.12 <1.2.0
+core_library_file=5102290
+core_library_dependency=>=1.1.17 <1.2.0
 config_library_file=4629803
 config_library_dependency=>=1.1.0
 team_reborn_energy_version=2.2.0
 jade_version=4439089
 
 # Runtime mods
-just_enough_items_file=4494409
+just_enough_items_file=5101373
