--- a/gradle.properties
+++ b/gradle.properties
@@ -54,6 +54,7 @@ config_library_file=4629794
 config_library_dependency=[1.1.6,)
 jade_file=3872400
 the_one_probe_file=3871444
+refined_storage_file=4861827
 
 # Runtime mods
 just_enough_items_file=4239206
