--- a/gradle.properties
+++ b/gradle.properties
@@ -54,6 +54,7 @@ config_library_file=4629788
 config_library_dependency=[1.1.6,)
 hwyla_file=2777880
 the_one_probe_file=2796414
+refined_storage_file=2851763
 
 # Runtime mods
 just_enough_items_file=3039707
