--- a/gradle.properties
+++ b/gradle.properties
@@ -54,3 +54,4 @@ config_library_file=4629779
 config_library_dependency=[1.1.6,)
 hwyla_file=2568751
 the_one_probe_file=2667280
+refined_storage_file=2940914
