--- a/gradle.properties
+++ b/gradle.properties
@@ -54,6 +54,7 @@ config_library_file=4629790
 config_library_dependency=[1.1.6,)
 hwyla_file=3033593
 the_one_probe_file=3319255
+refined_storage_file=3807951
 
 # Runtime mods
 just_enough_items_file=3681294
