--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import java.util.regex.Pattern
 
 plugins {
-    id "fabric-loom" version "1.1-SNAPSHOT"
+    id "fabric-loom" version "1.6-SNAPSHOT"
     id "com.matthewprenger.cursegradle" version "1.4.0"
     id "com.modrinth.minotaur" version "2.+"
 }
@@ -36,9 +36,9 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 
     // Core library
-    modImplementation "curse.maven:supermartijn642s-core-lib-454372:${project.core_library_file}"
+    modImplementation "com.supermartijn642.core:supermartijn642corelib:1.1.17-fabric-mc1.20.6" // TODO
     // Config library
-    modImplementation "curse.maven:supermartijn642s-config-lib-438332:${project.config_library_file}"
+    modImplementation "com.supermartijn642.config:supermartijn642configlib:1.1.8-fabric-mc1.20.6" // TODO
 
     // Team Reborn Energy API
     modCompileOnly("teamreborn:energy:${project.team_reborn_energy_version}") {
