--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.20.2
-minecraft_dependency=>=1.20 <1.21
-minecraft_suffix=mc1.20
-java_target=17
-java_dependency=>=17
-resource_pack_format=12
+minecraft_version=1.20.6
+minecraft_dependency=>=1.20.5 <1.21
+minecraft_suffix=mc1.20.6
+java_target=21
+java_dependency=>=21
+resource_pack_format=32
 
 # Fabric
-fabric_loader_version=0.15.6
+fabric_loader_version=0.15.11
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.91.6+1.20.2
+fabric_api_version=0.100.4+1.20.6
 fabric_api_dependency=*
 
 # Mixin
@@ -38,14 +38,14 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=301034
 curseforge_release_type=release
-curseforge_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
+curseforge_game_versions=1.20.5 1.20.6
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
 
 # Modrinth
 modrinth_project_id=entangled
 modrinth_release_type=release
-modrinth_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
+modrinth_game_versions=1.20.5 1.20.6
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
@@ -54,8 +54,8 @@ core_library_file=5102290
 core_library_dependency=>=1.1.17 <1.2.0
 config_library_file=4629803
 config_library_dependency=>=1.1.0
-team_reborn_energy_version=2.2.0
-jade_version=4439089
+team_reborn_energy_version=4.0.1
+jade_version=5366607
 
 # Runtime mods
 just_enough_items_file=5101373
